[metadata]
# replace with your username:
name = aiontai
version = 0.1
author = Alekseyzz
author_email = thehentwill@gmail.com
description = Async wrapper for NHentai API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alekseyzz/aiontai
project_urls =
    Bug Tracker = https://github.com/alekseyzz/aiontai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = aiontai
packages = find:
python_requires = >=3.6

[options.packages.find]
where = aiontai